--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,3 +3,6 @@ CHANGES
 1. Sets up cron jobs to automatically synch the videos.
 2. Renames the folders and files to maintain the order.
 3. Options to enter the savepath (The path in which the videos are to be saved) as commandline argument.
+
+
+Added support for windows
