--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,3 +11,7 @@ Added support for windows
 ----------------------CHANGES------------------------
 --------------------VERSION 1.0.0--------------------
 1. Added cookie support. User no longer needs to give login credentials everytime as long as he/she has the cookie file.
+
+--------------------VERSION 1.0.2----------------------
+1. Fixed a bug where -d option required the directory given as option to exist. Now the script creates the directory if it doesn't exist.
+2. The directory path given for -d can now be relative and the script takes care of converting it to absolute path.
